# d

./: CNAME  Cargo.toml  README.md  build-pkg.sh  build.sh  d-installer.pkg  install.sh  latest.txt  publish.sh  update.txt
docs/: install.ps1  install.sh
release/: d-installer.pkg  d-linux-x64  d-macos-arm64  d-macos-x64
src/: cli.rs  main.rs
src/commands/: ip.rs  mod.rs  push.rs  update.rs
src/commands/git/: fix.rs  mod.rs  update.rs
src/commands/macos/: mod.rs  start.rs
