[package]
name = "d"
version = "0.2.0"
edition = "2021"
description = "Sajat parancs-csalad macOS-hez"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }

# Meret-optimalizalt release profil: a leheto legkisebb binaris.
[profile.release]
opt-level = "z"      # meretre optimalizal (nem sebessegre)
lto = true           # link-time optimization: kidobja a holt kodot
codegen-units = 1    # jobb optimalizacio, cserebe lassabb forditas
strip = true         # debug szimbolumok eltavolitasa a binarisbol
panic = "abort"      # nincs unwinding kod -> kisebb binaris
