[package]
name = "d"
version = "0.4.0"
edition = "2024"
description = "d CLI"
authors = ["Dezső Benedek <benedek@dezso.hu>"]
documentation = "https://github.com/DezBenedek/d"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"      # meretre optimalizal (nem sebessegre)
lto = true           # link-time optimization: kidobja a holt kodot
codegen-units = 1    # jobb optimalizacio, cserebe lassabb forditas
strip = true         # debug szimbolumok eltavolitasa a binarisbol
panic = "abort"      # nincs unwinding kod -> kisebb binaris
